--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "compound_word_checker"
+name = "csafe"
 version = "0.2.0"
 authors = ["sts10 <sschlinkert@gmail.com>"]
 edition = "2018"
