--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,10 @@ authors = ["sts10 <sschlinkert@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "safety"
+harness = false
