--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["sts10 <sschlinkert@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+fxhash = "0.2.1"
 
 [dev-dependencies]
 criterion = "0.3"
