--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
 name = "csafe"
-version = "0.3.16"
+version = "0.3.17"
 authors = ["sts10 <sschlinkert@gmail.com>"]
 edition = "2021"
 
 [dependencies]
 fxhash = "0.2.1"
-# structopt = "0.3"
-clap = { version = "3.0.14", features = ["derive"] }
+clap = { version = "4.2.5", features = ["derive"] }
 
 [dev-dependencies]
-criterion = "0.3"
+# criterion = "0.3"
+criterion = "0.4.0"
 
 [[bench]]
 name = "safety"
